--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 before_install:
-- openssl aes-256-cbc -K $encrypted_079d67244b3e_key -iv $encrypted_079d67244b3e_iv
-  -in deploy_key.enc -out deploy_key -d
+- openssl aes-256-cbc -K $encrypted_b7a6092012dd_key -iv $encrypted_b7a6092012dd_iv -in ssh.enc -out ssh -d
+  -in ssh.enc -out ssh -d
 install: echo "skip install"
 branches:
   only: master
 
 after_success:
-- chmod 600 deploy_key
-- mv deploy_key ~/.ssh/id_rsa
+- chmod 600 ssh
+- mv ssh ~/.ssh/id_rsa
 - sftp -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no  -b hp.bt hp@projects.g-node.org
